# atomlib

./: .coveragerc  .gitattributes  .gitignore  MANIFEST.in  README.md  conftest.py  coverage.sh  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  versions.json
.github/scripts/: get_versioninfo.py
.github/workflows/: ci.yaml  docs.yaml
0.3/: 404.html  index.html  objects.inv
0.3/api/: index.html
0.3/api/atomcell/: index.html
0.3/api/atoms/: index.html
0.3/api/bbox/: index.html
0.3/api/cell/: index.html
0.3/api/defect/: index.html
0.3/api/disloc/: index.html
0.3/api/elem/: index.html
0.3/api/expr/: index.html
0.3/api/io/: index.html
0.3/api/io/cfg/: index.html
0.3/api/make/: index.html
0.3/api/mixins/: index.html
0.3/api/testing/: index.html
0.3/api/transform/: index.html
0.3/api/types/: index.html
0.3/api/util/: index.html
0.3/api/vec/: index.html
0.3/api/visualize/: index.html
0.3/search/: search_index.json
0.3/using/coords/: index.html
0.3/using/getting_started/: index.html
0.4/: 404.html  index.html  objects.inv
0.4/api/: index.html
0.4/api/atomcell/: index.html
0.4/api/atoms/: index.html
0.4/api/bbox/: index.html
0.4/api/cell/: index.html
0.4/api/defect/: index.html
0.4/api/elem/: index.html
0.4/api/expr/: index.html
0.4/api/io/: index.html
0.4/api/make/: index.html
0.4/api/mixins/: index.html
0.4/api/testing/: index.html
0.4/api/transform/: index.html
0.4/api/types/: index.html
0.4/api/util/: index.html
0.4/api/vec/: index.html
0.4/api/visualize/: index.html
0.4/search/: search_index.json
0.4/using/coords/: index.html
0.4/using/getting_started/: index.html
atomlib/: __init__.py  __main__.py  alter.py  atomcell.py  atoms.py  bbox.py  cell.py  cli.py  defect.py  disloc.py  elem.py  expr.py  mixins.py  test_alter.py  test_atomcell.py  test_atoms.py  test_core.py  test_defect.py  test_disloc.py  test_elem.py  test_transform.py  transform.py  types.py  util.py  vec.py
atomlib/data/: ion_radii.json  radii.npy  template.mslice
atomlib/io/: __init__.py  cfg.py  cif.py  lmp.py  mp_api.py  mslice.py  qe.py  test_cif.py  test_lmp.py  test_mslice.py  test_xsf.py  test_xyz.py  util.py  xsf.py  xyz.py
atomlib/make/: __init__.py  test_make.py
atomlib/testing/: __init__.py
atomlib/visualize/: __init__.py
data/: masses.npy
dev/api/atomcell/: index.html
dev/api/atoms/: index.html
dev/api/bbox/: index.html
dev/api/cell/: index.html
dev/api/defect/: index.html
dev/api/disloc/: index.html
dev/api/elem/: index.html
dev/api/expr/: index.html
dev/api/io/: index.html
dev/api/make/: index.html
dev/api/mixins/: index.html
dev/api/testing/: index.html
dev/api/transform/: index.html
dev/api/types/: index.html
dev/api/util/: index.html
dev/api/vec/: index.html
dev/api/visualize/: index.html
dev/using/coords/: index.html
dev/using/getting_started/: index.html
docs/: api.rst  conf.py  index.rst
docs/api/: atomcell.md  atoms.md  bbox.md  cell.md  defect.md  disloc.md  elem.md  expr.md  index.md  make.md  mixins.md  testing.md  transform.md  types.md  util.md  vec.md  visualize.md
docs/api/io/: cfg.md  cif.md  index.md  lmp.md  mp_api.md  mslice.md  qe.md  xsf.md  xyz.md
docs/atomlib/: atomlib.atomcell.rst  atomlib.atoms.rst  atomlib.bbox.rst  atomlib.cell.rst  atomlib.disloc.rst  atomlib.elem.rst  atomlib.io.rst  atomlib.make.rst  atomlib.transform.rst  atomlib.types.rst  atomlib.util.rst  atomlib.vec.rst  atomlib.visualize.rst
docs/structlib/: structlib.atomcell.rst  structlib.atoms.rst  structlib.bbox.rst  structlib.cell.rst  structlib.core.rst  structlib.disloc.rst  structlib.elem.rst  structlib.io.rst  structlib.make.rst  structlib.transform.rst  structlib.types.rst  structlib.util.rst  structlib.vec.rst  structlib.visualize.rst
docs/templates/autosummary/: module.rst
docs/using/: coords.md  getting_started.md
examples/: AlN-loop.ipynb  CeO2-defects.ipynb  coords.ipynb  znse.ipynb
notebooks/: AlN-loop.ipynb  AlN-ortho.xsf  AlN-ptycho.ipynb  coords.ipynb
result_structures/: AlN_ortho.xsf  Al_disloc_loop_extrinsic.xsf  Al_from_template.mslice  disloc_AlN_edge_shift.xsf  disloc_AlN_screw_cut010.xsf
structlib/: __init__.py  __main__.py  atomcell.py  atoms.py  bbox.py  cell.py  cif.py  cli.py  core.py  disloc.py  elem.py  elements.py  expr.py  frame.py  mixins.py  test_atoms.py  test_cell.py  test_cif.py  test_core.py  test_disloc.py  test_elem.py  test_expr.py  test_frame.py  test_transform.py  test_util.py  test_vec.py  test_xsf.py  test_xyz.py  transform.py  types.py  unit.py  util.py  vec.py  xsf.py  xyz.py
structlib/io/: __init__.py  cfg.py  cif.py  lmp.py  mp_api.py  mslice.py  qe.py  test_cif.py  test_lmp.py  test_mslice.py  test_xsf.py  test_xyz.py  xsf.py  xyz.py
structlib/make/: __init__.py  test_make.py
structlib/testing/: __init__.py
structlib/tests/: AlN.xyz  __init__.py  test.xyz  test_hex.cfg  test_io.py  test_transform.py  test_visualize.py  util.py
structlib/visualize/: __init__.py
tests/: test_cli.py  test_io.py  test_visualize.py  util.py
tests/baseline_files/: AlN.exyz  AlN.xyz  AlN_out.cfg  AlN_out.cif  AlN_out.lmp  AlN_roundtrip.cfg  AlN_roundtrip.cif  AlN_roundtrip.lmp  Al_disloc_loop_intrinsic.xsf  Al_from_template.mslice  Al_roundtrip.mslice  BaTiO3_tetragonal.xsf  CeO2_100_slab.xsf  CeO2_110_Gd_1.xsf  CeO2_110_Gd_all.xsf  CeO2_110_V_1.xsf  CeO2_110_pure_supercell.xsf  CeO2_112_slab.xsf  CeO2_conv.xsf  CeO2_ortho.xsf  CeO2_ortho_rotated.mslice  CeO2_prim.xsf  CeO2_pure.qe  CsBr.xsf  CsCl.xsf  SrTiO3.xsf  ZnSe_contaminated.xsf  ZnSe_conv.xsf  ZnSe_extrinsic_stacking.xsf  ZnSe_ortho.xsf  ZnSe_prim.xsf  disloc_AlN_edge_add.xsf  disloc_AlN_edge_cut011.xsf  disloc_AlN_edge_rm.xsf  disloc_AlN_screw_cut010_neg.xsf  stacking_fault_znse_add.xsf  stacking_fault_znse_rm.xsf  stacking_fault_znse_shift.xsf  unbunched.xyz  unbunched_actual.xyz
tests/input_files/: AlN.cif  AlN.xsf  AlN.xyz  AlN_Bfactor.cif  AlN_Ufactor.cif  bare_template.mslice  basic.cfg  basic.cif  basic.xyz  label_only.cif  labeled.lmp
(+23 files in other folders)
