[build-system]
requires = ["setuptools>=51.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atomlib"
version = "0.4"
authors = [
  {name = "Colin Gilgenbach", email = "hexane@mit.edu"},
]
license = {file = "LICENSE.txt"}
description = "A modern, extensible library for creating atomic structures"
readme = "README.md"
keywords = ["science", "atoms", "materials", "chemistry"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Typing :: Typed",
]

requires-python = ">=3.9"
dependencies = [
    "click~=8.1",  # for cli
    "numpy>=1.22,<2.3.0",  # tested on 2.0.0
    "scipy~=1.8",
    "polars~=1.9.0",
    "matplotlib~=3.5",
    "requests~=2.28",
    "lxml~=5.0",
    "typing-extensions~=4.4",
    "importlib_resources>=5.0",  # importlib.resources backport
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.4",
    "pytest-cov>=3.0.0",
    "coveragepy-lcov>=0.1.1",
    "nbmake>=1.4.1",
]
docs = [
    "mkdocs==1.6.1",
    "mkdocs-material==9.5.40",
    "mkdocstrings[python]==0.26.1",
    "markdown-include==0.8.1",
    "mike==2.1.3",
    "black>=24.3.0",
]

[project.urls]
Repository = "https://github.com/hexane360/atomlib.git"
Documentation = "https://hexane360.github.io/atomlib/"

[project.scripts]
atom = "atomlib.cli:cli"

[tool.setuptools.packages.find]
include = ["atomlib", "atomlib.*"]

[tool.pytest.ini_options]
markers = [
  "expected_filename: Filename to compare test result to",
]

[tool.flake8]
ignore = "W191,E101,E117,E741"
max-line-length = 99

[tool.pyright]
include = ['atomlib']
ignore = []
exclude = ['**/test_*.py']
typeCheckingMode = "strict"
reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportMissingTypeArgument = "none"
reportMissingTypeStubs = "information"
reportUnusedImport = "warning"
reportImportCycles = "information"
reportUnusedVariable = "warning"
reportPrivateUsage = "none"
reportUnnecessaryIsInstance = "none"
reportUnnecessaryComparison = "information"
reportUnnecessaryCast = "information"
reportUntypedBaseClass = "information"
reportConstantRedefinition = "none"
