[metadata]
name = structlib
version = 0.1
author = Colin Gilgenbach
author_email = hexane@mit.edu

[options]
python_requires = >=3.9
packages = find:
include_package_data = True

install_requires = 
	click~=8.1
	numpy~=1.22
	#pandas~=1.4  # replaced with polars
	polars~=0.13
	scipy~=1.8
	matplotlib~=3.5

[options.extras_require]
dev =
	pytest>=6.2.4
	pytest-cov>=3.0.0
	coveragepy-lcov>=0.1.1

[options.entry_points]
console_scripts =
	struct = structlib.cli:cli

[flake8]
ignore = W191,E101,E117,E741 #,E262,E265,E226,N802,N803,N806,N815,N816,N817
max-line-length = 99

[mypy]
python_version = 3.9
ignore_missing_imports = True
check_untyped_defs = True
allow_redefinition = True

[tool:pytest]
markers =
	expected_structure_filename: Filename to load expected structure from.