[metadata]
name = structlib
version = 0.2
url = 'https://github.com/hexane360/structlib'
author = Colin Gilgenbach
author_email = hexane@mit.edu
description = A collection of utilities to manipulate atomic structures
license = MPL-2.0
license_files = LICENSE.txt
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Physics
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Typing :: Typed

[options]
python_requires = >=3.9
packages = find:
include_package_data = True

install_requires = 
	click~=8.1
	numpy~=1.22
	#pandas~=1.4  # replaced with polars
	pyarrow~=9.0
	polars~=0.15.17
	scipy~=1.8
	matplotlib~=3.5
	requests~=2.28
	typing-extensions~=4.4;python_version<'3.10'

[options.extras_require]
dev =
	pytest>=6.2.4
	pytest-cov>=3.0.0
	coveragepy-lcov>=0.1.1
	nbmake>=1.4.1
docs =
	sphinx~=6.0
	sphinx-rtd-theme~=1.0

[options.entry_points]
console_scripts =
	struct = structlib.cli:cli

[flake8]
ignore = W191,E101,E117,E741 #,E262,E265,E226,N802,N803,N806,N815,N816,N817
max-line-length = 99

[mypy]
python_version = 3.9
ignore_missing_imports = True
check_untyped_defs = True
allow_redefinition = True

[tool:pytest]
markers =
	expected_filename: Filename to compare test result to
